tb-gcp-tr/landingZone/with-itop/istio_ec.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: houstonservice
spec:
  hosts:
    - "*"
  gateways:
    - mygateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: houstonservice
            port:
              number: 80
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - PATCH
          - DELETE
        allowHeaders:
          - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eagleconsole
spec:
  hosts:
    - "*"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            host: eagleconsole
            port:
              number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: eagleconsole
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  host: eagleconsole
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: houstonservice
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  host: houstonservice
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
